carousel disappears for mobile

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			    	<div class="item active">
 			    		<img src="img/summer-park.jpg" alt="Summer in the Park">
 			    		<div class="carousel-caption">
-			    			<p>Summer in our Parks!</p>
+			    			<p>Summer in our Parks</p>
 			    		</div>
 			    	</div>
 
