--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	</head>
 	<body>
 		<div class="container">
-			<nav class="navbar navbar-default" rold="navigation">
+			<nav class="navbar navbar-default" role="navigation">
 				<div class="navbar-header">
 					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".pawnee-navbar-menu">
 						<span class="sr-only">Toggle Navigation</span>
